  distribution. This is exciting news.

- Fixed bug #825827 - MySQL plugin RH9 compile problem.

- Repackaged the db source to minimize size.

- Removed the CBOT plugin code. Given up hope for a work around.

- Added DDMMYYYY date format to the CSV plugin. Also added auto detection for date field delimiters (/-.).

- Fixed bug #830024 - single-click versus double-click with SymbolDialog.

- Fixed bug #830357 - sychronised cross-hairs, data values were switched.

- Added ability to stack indicators or add them to the tabs. Now you can view more than one tabbed indicator at a time.

- Changed the new indicator dialog. Combined several steps and dialogs into one. Introduces an option to put the
  indicator in either the tabs or stackable.

- Added a search function to the workwith charts tab.

- Added a new field format for the CSV plugin. SDOHLCV files can now be imported.

- Changed trend line dialog and creation functions to better handle extending them without user intervention.
  There are now 2 value options for the start and end points. You can either use the bar data OHLC or specify a value.
  The "Use Bar" toggle selects the bar fields to be used instead of a specific value. Trend lines will
  automatically extend as bars are added to the chart.

- Added Point and Figure chart options to the preferences dialog. "P&F Box Size" determines the size of
  each box, leaving this value at zero uses the default box sizing formula. "P&F Reversal" indicates
  the number of boxes before a reversal takes place. The default is 3.

- Applied patch #834376 - enhance chart search and tooltip.

- Lowered the minimum bar spacing to 3 for line charts as per request.

- Applied patch #836996 - changelog shows a bit more detail

- Applied patch #837617 - patch to create libqtstalker.so. Kudos to Marco van Zwetselaar for moving the shared classes into a
  library. This has reduced the size of the executable and plugins by as much 2 thirds! Great patch Marco, we are back on track